# jydRenderer

./: .gitignore  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  README.md  launch.vs.json  vcpkg.json.example
include/: camera.hpp  framebuffer.hpp  model.hpp  renderer.hpp  vec.hpp  window.hpp
src/: framebuffer.cpp  main.cpp  model.cpp  renderer.cpp  window.cpp
